discussion/kv_engine/181784/181784_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

WIP ItemFreqDecayerTaskManager

Change-Id: I89001e96b0174d46b658816a9c87688e0d43a969

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Vesko Karaganev
Date: 2022-10-25 15:48:42.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-10-25 15:50:06.000000000
Message: 
Patch Set 3: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21434/ : FAILURE

clang-tidy found the following problems:

<pre>
error: too many errors emitted, stopping now [clang-diagnostic-error]
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/weak_ptr_bag.h:20:15: error: expected parameter declarator [clang-diagnostic-error]
    void push(std::shared_ptr<T> ptr) {
              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/weak_ptr_bag.h:20:15: error: use of undeclared identifier "std" [clang-diagnostic-error]
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/weak_ptr_bag.h:20:34: error: expected ")" [clang-diagnostic-error]
    void push(std::shared_ptr<T> ptr) {
                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/weak_ptr_bag.h:20:14: note: to match this "("
    void push(std::shared_ptr<T> ptr) {
             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/weak_ptr_bag.h:21:31: error: use of undeclared identifier "std" [clang-diagnostic-error]
        items.withLock([ptr = std::move(ptr)](auto& locked) {
                              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/weak_ptr_bag.h:21:41: error: use of undeclared identifier "ptr" [clang-diagnostic-error]
        items.withLock([ptr = std::move(ptr)](auto& locked) {
                                        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/weak_ptr_bag.h:23:30: error: use of undeclared identifier "ptr" [clang-diagnostic-error]
            locked.push_back(ptr);
                             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/weak_ptr_bag.h:27:5: error: use of undeclared identifier "std" [clang-diagnostic-error]
    std::vector<std::shared_ptr<T>> getItems() const {
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/weak_ptr_bag.h:27:17: error: use of undeclared identifier "std" [clang-diagnostic-error]
    std::vector<std::shared_ptr<T>> getItems() const {
                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/weak_ptr_bag.h:40:12: error: use of undeclared identifier "std" [clang-diagnostic-error]
    static std::vector<std::shared_ptr<T>> compact(
           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/weak_ptr_bag.h:40:24: error: use of undeclared identifier "std" [clang-diagnostic-error]
    static std::vector<std::shared_ptr<T>> compact(
                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/weak_ptr_bag.h:41:13: error: use of undeclared identifier "std" [clang-diagnostic-error]
            std::vector<std::weak_ptr<T>>& ptrs) {
            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/weak_ptr_bag.h:41:25: error: use of undeclared identifier "std" [clang-diagnostic-error]
            std::vector<std::weak_ptr<T>>& ptrs) {
                        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/weak_ptr_bag.h:42:9: error: use of undeclared identifier "std" [clang-diagnostic-error]
        std::vector<std::shared_ptr<T>> alive;
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/weak_ptr_bag.h:42:21: error: use of undeclared identifier "std" [clang-diagnostic-error]
        std::vector<std::shared_ptr<T>> alive;
                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/weak_ptr_bag.h:56:13: error: use of undeclared identifier "folly" [clang-diagnostic-error]
    mutable folly::Synchronized<std::vector<std::weak_ptr<T>>, std::mutex>
            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/weak_ptr_bag.h:56:33: error: use of undeclared identifier "std" [clang-diagnostic-error]
    mutable folly::Synchronized<std::vector<std::weak_ptr<T>>, std::mutex>
                                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/weak_ptr_bag.h:56:45: error: use of undeclared identifier "std" [clang-diagnostic-error]
    mutable folly::Synchronized<std::vector<std::weak_ptr<T>>, std::mutex>
                                            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/weak_ptr_bag.h:56:62: error: expected a type [clang-diagnostic-error]
    mutable folly::Synchronized<std::vector<std::weak_ptr<T>>, std::mutex>
                                                             ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21434/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/weak_ptr_bag.h:20:15:
error: expected parameter declarator [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21434/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/20700/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Vesko Karaganev
Date: 2022-10-25 16:28:53.000000000
Message: 
Abandoned

Abandoned, replaced by https://review.couchbase.org/c/kv_engine/+/179285
----------------------------------------------------------------------------------------------------------------------
